--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Titulo</h1>
+    
+    <header>
+        <h1>Titulo</h1>
+    </header>
 </body>
 </html>
